--- a/knowledge.html
+++ b/knowledge.html
@@ -5,7 +5,14 @@
     <title>Koç</title>
     <link href="main.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Preconnect to CheerpJ CDN -->
+    <link rel="preconnect" href="https://cjrtnc.leaningtech.com" crossorigin>
+    <link rel="dns-prefetch" href="//cjrtnc.leaningtech.com">
+
+    <!-- CheerpJ loader (4.2) -->
     <script src="https://cjrtnc.leaningtech.com/4.2/loader.js"></script>
+
     <style>
         .game-stage{position:relative; width:100%; max-width:1100px; margin:1rem 0; background:#000; border-radius:12px; overflow:hidden; aspect-ratio:16/9;}
         .game-loading{position:absolute; inset:0; display:grid; place-items:center; font:600 1rem system-ui; color:#fff; letter-spacing:.3px;}
@@ -17,18 +24,23 @@
     </style>
 
     <script>
-        // ===== CheerpJ preload with race-proof init (CJ 4.x, Java 17) =====
-        const PRELOAD_RESOURCES = null; // paste JSON from cjGetRuntimeResources() later
+        // ========= Faster, race‑proof CheerpJ init (CJ4, Java 17) =========
+        const CJ_RUNTIME = "4.2";
+        const CJ_VERSION = 17;
+        const CJ_PRELOAD_KEY = `cj-preload-resources-v${CJ_RUNTIME}-j${CJ_VERSION}`;
+        let PRELOAD_RESOURCES = null;
+        try { PRELOAD_RESOURCES = JSON.parse(localStorage.getItem(CJ_PRELOAD_KEY) || 'null'); } catch { PRELOAD_RESOURCES = null; }
+
         let cjReady = false;
-        let cjInitPromise = null; // guards concurrent init calls
+        let cjInitPromise = null;
 
         async function initCheerpJWithPreload() {
             if (cjReady) return true;
-            if (cjInitPromise) return cjInitPromise; // wait for in-flight init
+            if (cjInitPromise) return cjInitPromise;
 
             const loadingEl = document.querySelector('.game-loading');
             const opts = {
-                version: 17, // your JAR targets Java 17
+                version: CJ_VERSION,
                 status: "default",
                 preloadProgress: (done, total) => {
                     if (!loadingEl) return;
@@ -43,39 +55,60 @@
             cjInitPromise = (async () => {
                 await cheerpjInit(opts);
                 cjReady = true;
-                // Helper on first run: print optimal preload list
                 if (!PRELOAD_RESOURCES && typeof cjGetRuntimeResources === "function") {
                     try {
                         const obj = await cjGetRuntimeResources();
-                        console.log("%cCopy this into PRELOAD_RESOURCES:", "font-weight:bold");
-                        console.log(JSON.stringify(obj, null, 2));
+                        localStorage.setItem(CJ_PRELOAD_KEY, JSON.stringify(obj));
+                        console.log("%cSaved PRELOAD_RESOURCES to localStorage", "color:#22c55e");
                     } catch {}
                 }
                 return true;
             })();
 
-            try {
-                return await cjInitPromise;
-            } finally {
-                // keep the resolved promise for future callers; if it rejected, allow retries
-                if (!cjReady) cjInitPromise = null;
-            }
+            try { return await cjInitPromise; }
+            finally { if (!cjReady) cjInitPromise = null; }
         }
 
-        // GitHub Pages–friendly resolver → returns CheerpJ path (with /app prefix)
-        async function resolveAppPath(appRelativePath) {
+        // ========= Robust JAR resolver (tries many common spellings/paths) =========
+        const KNOWLEDGE_CANDIDATES = [
+            'JAR/Knowledge.jar',
+            'JAR/knowlegde.jar',   // common misspelling
+            'JAR/knowledge.jar',
+            'JAR/KNOWLEDGE.jar',
+            'Knowledge.jar',
+            'knowlegde.jar',
+            'knowledge.jar',
+            '.JAR/Knowledge.jar',  // if folder name accidentally starts with dot
+            '.JAR/knowlegde.jar',
+            'Jar/Knowledge.jar',
+            'jar/Knowledge.jar'
+        ];
+
+        let resolvedJarAppPath = null;
+        async function resolveKnowledgeJar() {
+            if (resolvedJarAppPath) return resolvedJarAppPath;
             const base = window.location.pathname.replace(/[^/]*$/, ''); // '/repo/' or '/'
-            const realUrls = [ base + appRelativePath, '/' + appRelativePath.replace(/^\/+/, '') ];
-            for (const realUrl of realUrls) {
-                try {
-                    const r = await fetch(realUrl, { method: 'HEAD', cache: 'no-store' });
-                    if (r.ok) return '/app' + realUrl;
-                } catch {}
+            const tested = [];
+            for (const rel of KNOWLEDGE_CANDIDATES) {
+                const realUrls = [ base + rel, '/' + rel.replace(/^\/+/, '') ];
+                for (const realUrl of realUrls) {
+                    tested.push(realUrl);
+                    try {
+                        const r = await fetch(realUrl, { method: 'HEAD', cache: 'no-store' });
+                        if (r.ok) {
+                            // warm cache with 1-byte range request (non-blocking)
+                            fetch(realUrl, { method:'GET', headers:{'Range':'bytes=0-0'}, cache:'no-store' }).catch(()=>{});
+                            resolvedJarAppPath = '/app' + realUrl;
+                            console.log('Resolved Knowledge JAR:', realUrl);
+                            return resolvedJarAppPath;
+                        }
+                    } catch {}
+                }
             }
-            throw new Error('Knowledge.jar not found at: ' + realUrls.join(' , '));
+            throw new Error('Knowledge.jar not found. Tested: ' + tested.join(' , '));
         }
 
-        // ===== Knowledge launcher =====
+        // ========= Knowledge launcher =========
         async function runKnowledge(e) {
             if (e) e.preventDefault();
             const btn = document.getElementById('play-knowledge');
@@ -113,7 +146,6 @@
                 });
             }
 
-            // Button state
             const icon = btn.querySelector('.play-icon');
             const prev = icon ? icon.textContent : null;
             btn.style.pointerEvents = 'none';
@@ -121,19 +153,15 @@
             if (icon) icon.textContent = '⏳';
 
             try {
-                await initCheerpJWithPreload(); // race-proofed
-
-                const jarAppPath = await resolveAppPath('JAR/Knowledge.jar');
-                console.log('Using JAR path:', jarAppPath);
+                await initCheerpJWithPreload();
+                const jarPath = await resolveKnowledgeJar();
 
                 const display = cheerpjCreateDisplay(-1, -1, stage);
                 display.style.width = '100%';
                 display.style.height = '100%';
 
-                // Use manifest Main-Class for Knowledge.jar
-                const exit = await cheerpjRunJar(jarAppPath);
+                const exit = await cheerpjRunJar(jarPath); // uses manifest Main-Class
                 console.log('Knowledge.jar exited with code', exit);
-
                 stage.querySelector('.game-loading')?.remove();
             } catch (err) {
                 console.error('Knowledge launch error:', err);
@@ -145,8 +173,11 @@
             }
         }
 
-        // Warm up on load; safe even if user clicks during init
-        window.addEventListener('load', async () => { try { await initCheerpJWithPreload(); } catch {} });
+        // Start init ASAP, also try to resolve the JAR early
+        document.addEventListener('DOMContentLoaded', () => {
+            initCheerpJWithPreload().catch(()=>{});
+            resolveKnowledgeJar().catch(()=>{});
+        });
     </script>
 </head>
 <body>
@@ -176,7 +207,7 @@
 </div>
 
 <main class="main">
-    <section id="description" class="description">
+    <section class="description" id="description">
         <h2>Knowledge:</h2>
         <button id="play-knowledge" onclick="runKnowledge(event)" class="button">
             <img src="img/knowledge.png" alt="">
@@ -190,7 +221,7 @@
 
 <script src="main.js"></script>
 <script>
-    // Login gate: redirect if not logged in
+    // Login gate
     if (localStorage.getItem('loggedIn') !== 'true') {
         const current = window.location.pathname.split('/').pop().replace('.html','');
         window.location.replace('login.html?target=' + current);
