--- a/knowledge.html
+++ b/knowledge.html
@@ -81,10 +81,10 @@
             const btn = document.getElementById('play-knowledge');
 
             // Create stage on first run
-            let stage = document.getElementById('game-stage');
+            let stage = document.getElementById('knowledge-stage');
             if (!stage) {
                 stage = document.createElement('div');
-                stage.id = 'uno-stage';
+                stage.id = 'knowledge-stage';
                 stage.className = 'game-stage';
 
                 const controls = document.createElement('div');
