--- a/knowledge.html
+++ b/knowledge.html
@@ -158,11 +158,10 @@
             </a>
             <nav id="navmenu" class="navmenu flex-grow-1 text-center">
                 <ul class="d-inline-flex list-unstyled mb-0">
+                    <li><a href="https://www.ku.edu.tr/" data-i18n="home" class="no-caret"></a></li>
                     <li><a href="index.html#research" data-i18n="research"></a></li>
                     <li><a href="index.html#games" data-i18n="games"></a></li>
-                    <li><a href="https://www.ku.edu.tr/" data-i18n="home"></a></li>
                 </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
             <div id="lang-switcher">
                 <button class="lang-btn" data-lang="es">ES</button>
