--- a/login.html
+++ b/login.html
@@ -35,16 +35,15 @@
 <div class="header">
     <div class="branding d-flex align-items-center">
         <div class="container position-relative d-flex align-items-left">
-            <a href="main.html" class="logo d-flex align-items-left me-3">
+            <a href="index.html" class="logo d-flex align-items-left me-3">
                 <img src="img/cropped-logo.png" alt="Logo" />
             </a>
             <nav id="navmenu" class="navmenu flex-grow-1 text-center">
                 <ul class="d-inline-flex list-unstyled mb-0">
-                    <il><a href="main.html#research" class="" data-i18n="research"></a></il>
-                    <il><a href="main.html#games" class="" data-i18n="games"></a></il>
-                    <il><a href="https://www.ku.edu.tr/" class="" data-i18n="home"></a></il>
+                    <li><a href="https://www.ku.edu.tr/" data-i18n="home" class="no-caret"></a></li>
+                    <li><a href="index.html#research" data-i18n="research"></a></li>
+                    <li><a href="index.html#games" data-i18n="games"></a></li>
                 </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
             <div id="lang-switcher">
                 <button class="lang-btn" data-lang="es">ES</button>
