--- a/knowledge.html
+++ b/knowledge.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Koç</title>
-    <link href="main.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <script src="https://cjrtnc.leaningtech.com/4.2/loader.js"></script>
     <style>
         .game-stage{position:relative; width:100%; max-width:1100px; margin:1rem 0; background:#000; border-radius:12px; overflow:hidden; aspect-ratio:16/9;}
@@ -176,7 +176,7 @@
 
 <main class="main">
     <section id="description" class="description">
-        <h2>UNO:</h2>
+        <h2 style="text-align: center">UNO:</h2>
         <button id="play-knowledge" onclick="runKnowledge(event)" class="button">
             <img src="img/knowledge.png" alt="">
             <span class="play-icon" data-i18n="play">▶</span>
