--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title data-i18n="loginTitle">Login</title>
-    <link href="main.css" rel="stylesheet" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <style>
         .login-wrap {
             max-width: 520px;
