--- a/uno.html
+++ b/uno.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Koç</title>
-    <link href="main.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
     <script src="https://cjrtnc.leaningtech.com/4.2/loader.js"></script>
     <style>
         .game-stage{position:relative; width:100%; max-width:1100px; margin:1rem 0; background:#000; border-radius:12px; overflow:hidden; aspect-ratio:16/9;}
@@ -156,7 +156,7 @@
     <div class="branding d-flex align-items-center">
         <div class="container position-relative d-flex align-items-left">
             <a href="index.html" class="logo d-flex align-items-left me-3">
-                <img src="img/cropped-logo.png" alt="Logo">
+                <img src="img/cropped-logo.png" alt="Logo" >
             </a>
             <nav id="navmenu" class="navmenu flex-grow-1 text-center">
                 <ul class="d-inline-flex list-unstyled mb-0">
@@ -178,7 +178,7 @@
 
 <main class="main">
     <section id="description" class="description">
-        <h2>UNO:</h2>
+        <h2 style="text-align: center">UNO:</h2>
         <button id="play-uno" onclick="runUno(event)" class="button">
             <img src="img/uno.png" alt="">
             <span class="play-icon" data-i18n="play">▶</span>
